crates/alien-cloudformation/tests/generator/snapshots/generator__generator__registration_tests__registration_regional_both.snap
---
source: crates/alien-cloudformation/tests/generator/registration_tests.rs
expression: yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: registration regional both
Transform:
- AWS::LanguageExtensions
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: Registration
      Parameters:
      - Token
      - ManagingRoleArn
      - ManagingAccountId
    - Label:
        default: Operations
      Parameters:
      - UpdatesMode
      - TelemetryMode
      - HeartbeatsMode
    ParameterLabels:
      HeartbeatsMode:
        default: Heartbeats
      ManagingAccountId:
        default: Image account ID
      ManagingRoleArn:
        default: Management role ARN
      TelemetryMode:
        default: Telemetry
      Token:
        default: Install token
      UpdatesMode:
        default: Updates
Parameters:
  Token:
    Type: String
    Description: Install token from the application setup page.
    NoEcho: true
  ManagingRoleArn:
    Type: String
    Description: ARN of the management identity allowed to assume setup-created roles.
    Default: ''
  ManagingAccountId:
    Type: String
    Description: AWS account ID for the management account that hosts application container images.
    Default: ''
  NetworkMode:
    Type: String
    Description: Choose create-new for a managed VPC, use-existing for your VPC, or use-default for the account default VPC.
    Default: create-new
    AllowedValues:
    - create-new
    - use-existing
    - use-default
  EndpointAccess:
    Type: String
    Description: Who can reach this deployment's endpoints. Private access requires AWS managed containers and cannot change after setup.
    Default: internet
    AllowedValues:
    - internet
    - private
  UpdatesMode:
    Type: String
    Description: How updates are applied after setup registration.
    Default: auto
    AllowedValues:
    - auto
    - approval-required
  TelemetryMode:
    Type: String
    Description: Telemetry collection behavior.
    Default: auto
    AllowedValues:
    - auto
  HeartbeatsMode:
    Type: String
    Description: Heartbeat health-check behavior.
    Default: "on"
    AllowedValues:
    - "off"
    - "on"
Mappings:
  RegionalCustomResourceServiceTokens:
    us-east-1:
      ServiceToken: arn:aws:lambda:us-east-1:123456789012:function:setup-registration
    eu-west-1:
      ServiceToken: arn:aws:lambda:eu-west-1:123456789012:function:setup-registration
Rules:
  SupportedAwsRegion:
    Assertions:
    - Assert:
        Fn::Contains:
        - - us-east-1
          - eu-west-1
        - Ref: AWS::Region
      AssertDescription: 'This template can only be launched in AWS regions supported by this environment: us-east-1, eu-west-1.'
Resources:
  LogsBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName:
        Fn::Sub: ${AWS::StackName}-logs-bucket
  DeploymentRegistration:
    Type: AWS::CloudFormation::CustomResource
    Properties:
      ServiceToken:
        Fn::FindInMap:
        - RegionalCustomResourceServiceTokens
        - Ref: AWS::Region
        - ServiceToken
      Token:
        Ref: Token
      DeploymentName:
        Ref: AWS::StackName
      ResourcePrefix:
        Ref: AWS::StackName
      SourceKind: cloudformation
      Platform: aws
      Region:
        Ref: AWS::Region
      SetupTarget: aws
      SetupImportFormatVersion: 1
      SetupFingerprint: test
      SetupFingerprintVersion: 1
      ManagementConfig:
        platform: aws
        managingRoleArn:
          Ref: ManagingRoleArn
      StackSettings:
        deploymentModel: push
        endpointAccess:
          Ref: EndpointAccess
        updates:
          Ref: UpdatesMode
        telemetry:
          Ref: TelemetryMode
        heartbeats:
          Ref: HeartbeatsMode
        network:
          Ref: AWS::NoValue
      Resources:
      - id: logs-bucket
        type: sample-resource
        importData:
          bucketName:
            Ref: LogsBucket
          bucketArn:
            Fn::GetAtt:
            - LogsBucket
            - Arn
      CallbackUrl: https://api.dev.example.com
    DependsOn:
    - LogsBucket
Outputs:
  DeploymentSourceKind:
    Value: cloudformation
    Description: Setup source kind.
  DeploymentId:
    Value:
      Fn::GetAtt:
      - DeploymentRegistration
      - DeploymentId
    Description: Registered deployment ID.
  DeploymentResourcePrefix:
    Value:
      Ref: AWS::StackName
    Description: Stable physical resource prefix.
  DeploymentPlatform:
    Value: aws
    Description: Target platform.
  DeploymentRegion:
    Value:
      Ref: AWS::Region
    Description: AWS region.
  DeploymentSetupTarget:
    Value: aws
    Description: Setup target.
  DeploymentSetupFingerprint:
    Value: test
    Description: Setup compatibility fingerprint.
  DeploymentSetupImportFormatVersion:
    Value: 1
    Description: Setup registration payload format version.
  DeploymentSetupFingerprintVersion:
    Value: 1
    Description: Setup fingerprint algorithm version.
  DeploymentManagementConfig:
    Value:
      Fn::ToJsonString:
        platform: aws
        managingRoleArn:
          Ref: ManagingRoleArn
    Description: Deployment registration management configuration JSON.
  DeploymentStackSettings:
    Value:
      Fn::ToJsonString:
        deploymentModel: push
        endpointAccess:
          Ref: EndpointAccess
        updates:
          Ref: UpdatesMode
        telemetry:
          Ref: TelemetryMode
        heartbeats:
          Ref: HeartbeatsMode
        network:
          Ref: AWS::NoValue
    Description: Deployment registration settings JSON.
  DeploymentResources:
    Value:
      Fn::ToJsonString:
      - id: logs-bucket
        type: sample-resource
        importData:
          bucketName:
            Ref: LogsBucket
          bucketArn:
            Fn::GetAtt:
            - LogsBucket
            - Arn
    Description: Deployment registration resources JSON.
